--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -25,7 +25,8 @@ h1 {
 .container {
     display: block;
     width: 800px;
-    margin: 100px auto;
+    margin: 0 auto;
+    margin-top: 100px;
     padding: 20px;
     border: 1px solid black;
     border-radius: 20px;
@@ -47,7 +48,8 @@ a {
     color: black;
     text-decoration: none;
     display: block;
-    width: 300px;
+    /* width: 300px; */
+    width: 200px;
     margin: 0 auto;
 }
 
@@ -56,7 +58,6 @@ a {
 
 a:visited {
     color: black;
-    text-decoration-color: none;
 }
 
 a:hover {
